--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>Minecraft</title>
   </head>
   <body>
@@ -22,90 +22,107 @@
       </nav>
     </header>
     <main class="p1">
-      <h1>Quem criou o Minecraft? Conheça a história do game!</h1>
-      <img class="img1" src="criador.webp" alt="Imagem do criador" />
-      <h2>Como tudo começou</h2>
-      <p>
-        Como já dito, o jogo foi lançado em 2009. O criador de Minecraft é o
-        programador e designer sueco Markus "Notch" Persson, que levou apenas
-        seis dias para criar tudo do zero. O projeto começou em 10 de maio, e no
-        dia 16, ele já disponibilizou o projeto em fóruns.
-      </p>
-
-      <p>
-        A ideia do jogo não é toda original e tem suas guias para as mecânicas e
-        outros conceitos. A principal delas é Infiniminer, um jogo de mineração
-        que Notch adorava. À primeira vista, o game lembra muito o popular jogo
-        de blocos.
-      </p>
-
-      <p>
-        Além desse game, outras inspirações para o game designer foram Dwarf
-        Fortress, Dungeon Keeper e RollerCoaster Tycoon. Os simuladores e suas
-        funções de gerenciamento foram misturadas com elementos de RPG e deram
-        um caminho para Notch criar a base de tudo que conhecemos hoje.
-      </p>
-
-      <h2>Batismo turbulento</h2>
-
-      <p>
-        Antes de ganhar o nome de Minecraft, algo que pode ser traduzido como
-        “minerar e construir”, o primeiro nome do jogo era bem direto ao ponto:
-        “Cave Game”. Com um nome de “Jogo de Caverna”, era fácil imaginar sobre
-        o que se tratava o título.
-      </p>
-
-      <p>
-        Porém, o nome sofreu uma nova alteração e passou a se chamar “Minecraft:
-        Order of the Stone” (A Ordem da Pedra), algo com um ar muito medieval.
-        Felizmente, o nome foi encurtado e ficamos com o conciso Minecraft.
-      </p>
-
-      <img class="img2" src="img3.webp" alt="Imagem do prototipo" />
-
-      <h2>Os anos seguintes</h2>
-
-      <p>
-        Depois de todas essas “mudanças criativas” e uma série de ajustes e
-        melhorias, em 2011 o game saiu da limitação dos fóruns e foi lançado
-        para todos, começando sua crescente popularidade com criadores de
-        conteúdo e fãs em todo mundo.
-      </p>
-
-      <p>
-        Em 2014, Notch publicou em seu perfil pessoal do Twitter que queria
-        vender sua parte na Mojang e seu grande Minecraft. Assim, a Microsoft
-        aproveitou a oportunidade e comprou a empresa por US$ 2,5 bilhões.
-      </p>
-
-      <h2>Polêmicas</h2>
-
-      <p>
-        Mesmo com uma obra memorável, Notch sempre se envolveu em diversas
-        polêmicas na internet. Os casos mais marcantes foram entre 2016 e 2017,
-        quando ele usou muito o Twitter para atacar mulheres e pessoas LGBTQIA+.
-      </p>
-
-      <p>
-        As publicações sempre envolviam banalizações às manifestações por
-        direitos, xingamentos de baixo calão e outras ofensas sexistas,
-        transfóbicas e racistas. Além disso, o programador também compartilhava
-        diversas teorias da conspiração envolvendo acusações de pedofilia e
-        tráfico infantil do Partido Democrata dos Estados Unidos.
-      </p>
-
-      <p>
-        Com tantas problemáticas, a Microsoft passou a evitar manter a
-        associação da imagem do jogo com Markus Persson, de modo que o criador
-        não foi convidado para a festa de 10 anos do Minecraft, em 2019, já que
-        seu posicionamento era contra os valores de inclusão e igualdade
-        pregados pela companhia gerenciada por Satya Nadella.
-      </p>
-
-      <p>
-        Em junho de 2021, ele chegou a falar que sua criação estava "um pouco
-        morta".
-      </p>
+      <article>
+        <h1>Quem criou o Minecraft? Conheça a história do game!</h1>
+        <img class="img1" src="criador.webp" alt="Imagem do criador" />
+        <section>
+          <h2>Como tudo começou</h2>
+          <p>
+            Como já dito, o jogo foi lançado em 2009. O criador de Minecraft é o
+            programador e designer sueco Markus "Notch" Persson, que levou apenas
+            seis dias para criar tudo do zero. O projeto começou em 10 de maio, e no
+            dia 16, ele já disponibilizou o projeto em fóruns.
+          </p>
+          <p>
+            A ideia do jogo não é toda original e tem suas guias para as mecânicas e
+            outros conceitos. A principal delas é Infiniminer, um jogo de mineração
+            que Notch adorava. À primeira vista, o game lembra muito o popular jogo
+            de blocos.
+          </p>
+          <p>
+            Além desse game, outras inspirações para o game designer foram Dwarf
+            Fortress, Dungeon Keeper e RollerCoaster Tycoon. Os simuladores e suas
+            funções de gerenciamento foram misturadas com elementos de RPG e deram
+            um caminho para Notch criar a base de tudo que conhecemos hoje.
+          </p>
+        </section>
+        <section>
+          <h2>Quantos anos tem o Minecraft?</h2>
+          <p>
+            A versão original do Minecraft, que é a edição Java do jogo, começou a
+            ser desenvolvida em 2009 com vários Alphas e Betas, desde 2010 até o início
+            de 2011. A versão completa, intitulada “1.0 - Adventure Update” foi lançada
+            em 18 de novembro de 2011. Isso faz com que o Minecraft tenha 14 anos desde
+            sua concepção inicial e 12 anos desde seu lançamento público completo.
+          </p>
+        </section>
+        <section>
+          <h2>Batismo turbulento</h2>
+          <p>
+            Antes de ganhar o nome de Minecraft, algo que pode ser traduzido como
+            “minerar e construir”, o primeiro nome do jogo era bem direto ao ponto:
+            “Cave Game”. Com um nome de “Jogo de Caverna”, era fácil imaginar sobre
+            o que se tratava o título.
+          </p>
+          <p>
+            Porém, o nome sofreu uma nova alteração e passou a se chamar “Minecraft:
+            Order of the Stone” (A Ordem da Pedra), algo com um ar muito medieval.
+            Felizmente, o nome foi encurtado e ficamos com o conciso Minecraft.
+          </p>
+          <img class="img2" src="img3.webp" alt="Imagem do prototipo" />
+        </section>
+        <section>
+          <h2>Os anos seguintes</h2>
+          <p>
+            Depois de todas essas “mudanças criativas” e uma série de ajustes e
+            melhorias, em 2011 o game saiu da limitação dos fóruns e foi lançado
+            para todos, começando sua crescente popularidade com criadores de
+            conteúdo e fãs em todo mundo.
+          </p>
+          <p>
+            Em 2014, Notch publicou em seu perfil pessoal do Twitter que queria
+            vender sua parte na Mojang e seu grande Minecraft. Assim, a Microsoft
+            aproveitou a oportunidade e comprou a empresa por US$ 2,5 bilhões.
+          </p>
+        </section>
+        <section>
+          <h2>Qual é o futuro de Minecraft?</h2>
+          <p>
+            Com o Minecraft evoluindo de tantas maneiras inesperadas e únicas ao
+            longo dos anos, não há como dizer onde o jogo estará daqui a 5 anos.
+            Tudo o que podemos esperar é que os desenvolvedores da Mojang, assim
+            como os jogadores de Minecraft em todo o mundo, continuarão a nos
+            surpreender e nos impressionar com seu talento e engenhosidade, construindo
+            novas memórias.
+          </p>
+        </section>
+        <section>
+          <h2>Polêmicas</h2>
+          <p>
+            Mesmo com uma obra memorável, Notch sempre se envolveu em diversas
+            polêmicas na internet. Os casos mais marcantes foram entre 2016 e 2017,
+            quando ele usou muito o Twitter para atacar mulheres e pessoas LGBTQIA+.
+          </p>
+          <p>
+            As publicações sempre envolviam banalizações às manifestações por
+            direitos, xingamentos de baixo calão e outras ofensas sexistas,
+            transfóbicas e racistas. Além disso, o programador também compartilhava
+            diversas teorias da conspiração envolvendo acusações de pedofilia e
+            tráfico infantil do Partido Democrata dos Estados Unidos.
+          </p>
+          <p>
+            Com tantas problemáticas, a Microsoft passou a evitar manter a
+            associação da imagem do jogo com Markus Persson, de modo que o criador
+            não foi convidado para a festa de 10 anos do Minecraft, em 2019, já que
+            seu posicionamento era contra os valores de inclusão e igualdade
+            pregados pela companhia gerenciada por Satya Nadella.
+          </p>
+          <p>
+            Em junho de 2021, ele chegou a falar que sua criação estava "um pouco
+            morta".
+          </p>
+        </section>
+      </article>
     </main>
     <footer class="p2">
       <p>&copy; Telefone: <a href="tel:+5583991762095">(83) 99176-2095</a></p>
