--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>Minecraft</title>
   </head>
   <body>
@@ -21,7 +21,82 @@
         </ul>
       </nav>
     </header>
-    <main class="p1"></main>
+    <main class="p1">
+      <section id="intro">
+        <h1>Modos do Jogo</h1>
+        <p>
+          O Minecraft é um jogo muito versátil e possui vários modos de jogo que
+          atendem a diferentes estilos e preferências. Aqui estão os principais
+          modos:
+        </p>
+      </section>
+
+
+      <section id="modos">
+        <article class="modo-de-jogo">
+          <h2>Sobrevivência (Survival)</h2>
+          <p>
+            Neste modo, você precisa coletar recursos, construir abrigo e
+            sobreviver a inimigos como zumbis, esqueletos e outros monstros. A
+            gestão de saúde e fome é crucial, e você deve enfrentar desafios
+            para se manter vivo e progredir.
+          </p>
+        </article>
+
+
+        <article class="modo-de-jogo">
+          <h2>Criativo (Creative)</h2>
+          <p>
+            No modo Criativo, você tem acesso a todos os blocos e itens do jogo
+            sem limitações. Não há barra de saúde ou fome, e você pode voar. É
+            ideal para construir e criar sem se preocupar com a sobrevivência.
+          </p>
+        </article>
+
+
+        <article class="modo-de-jogo">
+          <h2>Aventura (Adventure)</h2>
+          <p>
+            Esse modo é voltado para mapas personalizados e aventuras criadas
+            por outros jogadores. Ele limita certos aspectos do jogo para
+            garantir que as experiências e objetivos sejam seguidos conforme o
+            planejado pelo criador do mapa.
+          </p>
+        </article>
+
+
+        <article class="modo-de-jogo">
+          <h2>Espectador (Spectator)</h2>
+          <p>
+            No modo Espectador, você pode voar e atravessar blocos, observando o
+            mundo e outros jogadores sem interagir com ele. É útil para explorar
+            ou para assistir a partidas sem interferir.
+          </p>
+        </article>
+
+
+        <article class="modo-de-jogo">
+          <h2>Hardcore</h2>
+
+
+          <p>
+            Este é um modo semelhante ao Sobrevivência, mas com uma dificuldade
+            muito maior e apenas uma vida. Se você morrer, o jogo é encerrado e
+            você não pode voltar ao mundo salvo.
+          </p>
+        </article>
+
+
+        <article class="modo-de-jogo">
+          <h2>RPG (Role-Playing Game)</h2>
+          <p>
+            Alguns servidores e mapas são projetados para oferecer uma
+            experiência de RPG, onde você pode assumir papéis específicos e
+            seguir histórias e missões elaboradas.
+          </p>
+        </article>
+      </section>
+    </main>
     <footer class="p2">
       <p>&copy; Telefone: <a href="tel:+5583991762095">(83) 99176-2095</a></p>
       <p>
