--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <title>Minecraft</title>
   </head>
   <body>
@@ -21,7 +21,84 @@
         </ul>
       </nav>
     </header>
-    <main class="p1"></main>
+    <main class="p1">
+      <section id="intro">
+        <h1>Dicas</h1>
+        <p>
+          Seja você um novato ou um veterano em Minecraft, essas dicas vão
+          ajudar a aprimorar sua experiência no jogo. Minecraft oferece um mundo
+          vasto e cheio de possibilidades, onde criatividade e estratégia são
+          essenciais. Reunimos dicas úteis para você aproveitar ao máximo suas
+          aventuras, desde técnicas básicas até estratégias avançadas.
+          Prepare-se para aprimorar suas habilidades e dominar o universo dos
+          blocos!
+        </p>
+      </section>
+
+
+      <section id="dicas">
+        <article>
+          <h2>Explore o Mundo</h2>
+          <p>
+            Explore diferentes biomas e cavernas para encontrar recursos raros e
+            itens únicos. Cada bioma tem seus próprios recursos e criaturas.
+          </p>
+        </article>
+
+
+        <article>
+          <h2>Mineração Eficiente</h2>
+          <p>
+            Comece a mineração em níveis mais baixos do mundo para encontrar
+            recursos valiosos como diamantes e esmeraldas. Use a técnica de
+            mineração em galeria ou escavações em ramificações para otimizar a
+            busca.
+          </p>
+        </article>
+
+
+        <article>
+          <h2>Construção Inteligente</h2>
+          <p>
+            Construa um abrigo seguro logo no início para se proteger dos
+            monstros. Pense em um design funcional para a sua casa, incluindo
+            espaço para baús, fornos e mesas de trabalho.
+          </p>
+        </article>
+
+
+        <article>
+          <h2>Crie Ferramentas e Armas</h2>
+          <p>
+            Utilize diferentes materiais para criar ferramentas e armas mais
+            duráveis e eficientes. Ferramentas de ferro e diamante são muito
+            melhores do que as de pedra ou madeira.
+          </p>
+        </article>
+
+
+        <article>
+          <h2>Cuide da Alimentação</h2>
+          <p>
+            Mantenha sempre uma boa reserva de alimentos para recuperar a saúde
+            e evitar morrer de fome. Cultivar plantações e criar animais pode
+            fornecer uma fonte constante de comida.
+          </p>
+        </article>
+
+
+        <article>
+          <h2>Jogue com Amigos</h2>
+          <p>
+            Minecraft é muito mais divertido quando jogado com amigos. Colabore
+            em construções, explore juntos e divirta-se com a criatividade em
+            grupo.
+          </p>
+        </article>
+      </section>
+    </main>
+
+
     <footer class="p2">
       <p>&copy; Telefone: <a href="tel:+5583991762095">(83) 99176-2095</a></p>
       <p>
@@ -31,3 +108,5 @@
     </footer>
   </body>
 </html>
+
+
