--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
           pequenos e com jogadores de todas as idades.
         </p>
       </article>
+      
+
+      <article>
+        <h2>Legado</h2>
+
+
+        <p>
+          Minecraft é considerado por muitos críticos e jogadores como um dos
+          melhores jogos de todos os tempos bem como um dos mais influentes. Em
+          2015, a USgamer colocou-o em 6º lugar em sua lista dos 15 Melhores
+          Jogos Desde o Ano 2000. Em 2016, Minecraft foi colocado em 6º lugar na
+          lista dos 50 Melhores Jogos de Todos os Tempos da revista Time. Em
+          setembro de 2019, a The Guardian classificou Minecraft como o melhor
+          jogo (das duas primeiras décadas) do século 21 e em novembro de 2019 a
+          Polygon chamou-o de "o jogo mais importante da década". Em dezembro de
+          2019, a Forbes fez uma menção especial ao Minecraft em uma lista dos
+          melhores jogos dos anos 2010, afirmando que é "sem dúvida um dos jogos
+          mais importantes dos últimos dez anos". A Wired colocou-o em 2º lugar
+          em sua lista dos 10 Jogos Mais Influentes da Década de 2010.
+        </p>
+      </article>
+
     </main>
     <footer class="p2">
       <p>&copy; Telefone: <a href="tel:+5583991762095">(83) 99176-2095</a></p>
