--- a/index6.html
+++ b/index6.html
@@ -21,7 +21,159 @@
         </ul>
       </nav>
     </header>
+
     <main>
+      
+
+      <section class="p1">
+        <h1 class="h1_1">Padrões da Comunidade para o Minecraft</h1>
+
+
+        <section>
+          <h2 class="h2_1">Nossos valores</h2>
+          <p>
+            O espírito da inclusão vive em nossos valores, que são vitais para
+            manter uma comunidade vibrante e receptiva.
+          </p>
+          <ul class="ul_1">
+            <li>O Minecraft é para todas as pessoas</li>
+            <li>A diversidade empodera nossa comunidade</li>
+            <li>Jogar com outras pessoas deve ser algo seguro e inclusivo</li>
+            <li>O ódio não tem lugar aqui</li>
+          </ul>
+          <p>
+            O Minecraft é para todas as pessoas e a diversidade empodera nossa
+            comunidade
+          </p>
+          <ul class="ul_1">
+            <li>
+              O Minecraft está disponível em países em todo o mundo, e é
+              importante que nossa plataforma seja um lugar seguro e inclusivo
+              para pessoas de todas as origens.
+            </li>
+            <li>
+              Cada jogador na comunidade do Minecraft merece um lugar para ser
+              ele mesmo e para construir, criar e se expressar em um ambiente
+              que é inclusivo para todas as pessoas. Queremos ser uma comunidade
+              onde todas as pessoas possam se divertir com o Minecraft.
+            </li>
+            <li>
+              A comunidade do Minecraft é sua e também é de todos. Portanto, ao
+              expressar suas opiniões, faça isso com respeito e educação. Não
+              exploda como um creeper!
+            </li>
+          </ul>
+          <p>
+            Jogar com outras pessoas deve ser algo seguro e inclusivo, e o ódio
+            não tem lugar aqui.
+          </p>
+          <ul class="ul_1">
+            <li>
+              Para manter a comunidade do Minecraft receptiva e inclusiva para
+              todas as pessoas, temos uma política de tolerância zero em relação
+              a discursos de ódio, terrorismo ou extremismo violento, bullying,
+              assédio, propostas de cunho sexual, fraude ou ameaça a outras
+              pessoas.
+            </li>
+            <li>
+              As modificações, capas, construções, realms, pacotes e outros
+              conteúdos que você construir com o Minecraft podem ser uma ótima
+              forma de mostrar o que é importante para você e expressar sua
+              criatividade. No entanto, não permitimos conteúdo que retrate ódio
+              ou vieses ou encoraje atividades ilegais.
+            </li>
+            <li>
+              Por fraude, entende-se qualquer tentativa de enganar ou fazer
+              afirmações falsas visando vantagens pessoais ou financeiras.
+              Quando alguém comete uma fraude, essa pessoa burla os processos
+              que mantêm as coisas justas e financeiramente seguras para todas
+              as pessoas.
+            </li>
+          </ul>
+          <p>
+            O mundo do Minecraft é feito de jogadores para jogadores. Não
+            importa se você está construindo castelos majestosos no modo
+            criativo ou está tentando derrotar o Dragão Ender no modo
+            sobrevivência, a segurança dos jogadores é uma prioridade para a
+            Mojang conseguir garantir que todas as pessoas se sintam protegidas
+            ao contribuírem da sua própria forma.
+          </p>
+        </section>
+
+
+        <section>
+          <h2 class="h2_1">Criadores de Conteúdo</h2>
+
+
+          <article>
+            <h3 >Ameizim</h3>
+            <img class="img5" src="https://s.namemc.com/3d/skin/body.png?id=41695555a6490e1a&model=classic&width=256&height=256" alt="Ameizim" />
+            <p>
+              Ameizim é um criador brasileiro de conteúdos de Minecraft. Ele
+              participou da série Minecraft: A Jornada feita por Pedrux e com
+              participação de Mendrake, além de outros vídeos dentro do jogo.
+            </p>
+            <p><strong>Data de Início:</strong> Maio de 2019 (5 anos atrás)</p>
+          </article>
+          <article>
+            <h3>Apuh</h3>
+            <img class="img5" src="https://tse4.mm.bing.net/th?id=OIP.vRNeqfOH6CgD1v-XsMp_fQAAAA&pid=Api&P=0&h=180" alt="Apuh" />
+            <p>
+              Apuh é um criador de conteúdo de Minecraft que já participou de
+              séries como StonksCraft, Topcraft, Ultimato ao lado de grandes
+              criadores como Forever Player e EI MINE. Ele faz parte de um grupo
+              conhecido como Irmandade, onde vários outros criadores fazem
+              parte, como Dlet e Lggj.
+            </p>
+            <p><strong>Data de Início:</strong> Abril de 2020 (4 anos atrás)</p>
+          </article>
+
+
+          <article>
+            <h3>Bagi</h3>
+            <img class="img5" src="https://tse2.mm.bing.net/th?id=OIP.8eIBMnwZ0ChXwP-CkZiqIgAAAA&pid=Api&P=0&h=180" alt="Bagi" />
+            <p>
+              Bagi é uma criadora de conteúdo brasileira que é focada em
+              transmissões ao vivo no geral, mas que também cria conteúdos ao
+              vivo de Minecraft. Ela também já foi mostrada no vídeo publicado
+              pela conta oficial de Minecraft em comemoração ao aniversário de
+              15 anos.
+            </p>
+            <p>
+              <strong>Data de Início:</strong> Março de 2010 (14 anos atrás)
+            </p>
+          </article>
+
+
+          <article><h3>Brunim Neet's</h3>
+            <img class="img5" src="https://tse2.mm.bing.net/th?id=OIP.M5XO1moI52yNDMVPng-wYAAAAA&pid=Api&P=0&h=180" alt="Brunim Neet's" />
+            <p>
+              Brunim Neet's cria conteúdos com o Minecraft e fez séries como
+              StonksCraft, além de ter participado de outras como Topcraft ao
+              lado de grandes criadores de conteúdo.
+            </p>
+            <p>
+              <strong>Data de Início:</strong> Dezembro de 2014 (9 anos atrás)
+            </p>
+          </article>
+
+
+          <article>
+            <h3>DonJone</h3>
+            <img class="img5" src="https://www.gamergeeks.net/cache/player/minecraft/skins/5d2b29faf3f64158b98eca72dac2c9f2-1703796622-head.png" alt="DonJone" />
+            <p>
+              DonJone é um criador de conteúdo de Minecraft que é conhecido por
+              vídeos curtos mostrando as principais curiosidades do jogo, além
+              de fazer vídeos sobrevivendo e mostrando incríveis sementes para
+              jogar.
+            </p>
+            <p>
+              <strong>Data de Início:</strong> Março de 2013 (11 anos atrás)
+            </p>
+          </article>
+        </section>
+      </section>
+
     </main>
     <footer class="p2">
       <p>&copy; Telefone: <a href="tel:+5583991762095">(83) 99176-2095</a></p>
